<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/profileAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationZ="5dp"
        android:visibility="gone"
        tools:visibility="visible">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="false"
            app:contentScrim="@color/anilab_navy"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.flaviofaria.kenburnsview.KenBurnsView
                    android:id="@+id/profileBannerImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />
                <ImageView
                    android:id="@+id/profileBannerImageNoKen"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />
                <ImageView
                    android:id="@+id/profileBannerGradient"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/linear_gradient_bg"
                    tools:ignore="ContentDescription" />
                <LinearLayout
                    android:id="@+id/profileUserDataContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/profileUserAvatarContainer"
                        android:layout_width="82dp"
                        android:layout_height="82dp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/anilab_surface"
                        app:cardCornerRadius="64dp"
                        app:strokeColor="@color/anilab_cyan"
                        app:strokeWidth="2dp">
                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/profileUserAvatar"
                            android:layout_width="82dp"
                            android:layout_height="82dp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_round_add_circle_24"
                            tools:ignore="ContentDescription,ImageContrastCheck" />
                    </com.google.android.material.card.MaterialCardView>
                    <TextView
                        android:id="@+id/profileUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:textColor="@color/anilab_text"
                        android:textSize="18sp" />
                    <Button
                        android:id="@+id/followButton"
                        style="@style/Widget.Material3.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/anilab_cyan"
                        android:textSize="14sp"
                        app:cornerRadius="12dp"
                        app:strokeColor="@color/anilab_cyan"
                        tools:ignore="SpeakableTextPresentCheck" />
                </LinearLayout>
                <androidx.cardview.widget.CardView
                    android:id="@+id/profileCloseButton"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="start"
                    android:layout_margin="20dp"
                    android:backgroundTint="@color/anilab_surface"
                    app:cardCornerRadius="18dp">
                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_round_close_24"
                        app:tint="@color/anilab_ice"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>
                <ImageView
                    android:id="@+id/profileMenuButton"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="end"
                    android:layout_margin="20dp"
                    android:background="@drawable/anilab_continue_surface"
                    android:contentDescription="@string/menu"
                    android:padding="6dp"
                    android:src="@drawable/ic_round_dots_vertical_24"
                    app:tint="@color/anilab_ice" />
            </FrameLayout>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profileButtonContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="200dp"
                android:layout_marginBottom="2dp"
                android:backgroundTint="@color/anilab_surface"
                app:cardCornerRadius="20dp"
                app:strokeColor="@color/anilab_outline"
                app:strokeWidth="1dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout android:id="@+id/profileFollowerCountContainer" style="@style/AniLabProfileStat" >
                        <TextView android:id="@+id/profileFollowerCount" style="@style/AniLabProfileStatValue" tools:text="1" />
                        <TextView style="@style/AniLabProfileStatLabel" android:text="@string/followers" />
                    </LinearLayout>
                    <LinearLayout android:id="@+id/profileFollowingCountContainer" style="@style/AniLabProfileStat" >
                        <TextView android:id="@+id/profileFollowingCount" style="@style/AniLabProfileStatValue" tools:text="2" />
                        <TextView style="@style/AniLabProfileStatLabel" android:text="@string/following" />
                    </LinearLayout>
                    <LinearLayout android:id="@+id/profileAnimeCountContainer" style="@style/AniLabProfileStat" >
                        <TextView android:id="@+id/profileAnimeCount" style="@style/AniLabProfileStatValue" tools:text="3" />
                        <TextView style="@style/AniLabProfileStatLabel" android:text="@string/anime" />
                    </LinearLayout>
                    <LinearLayout android:id="@+id/profileMangaCountContainer" style="@style/AniLabProfileStat" >
                        <TextView android:id="@+id/profileMangaCount" style="@style/AniLabProfileStatValue" tools:text="4" />
                        <TextView style="@style/AniLabProfileStatLabel" android:text="@string/manga" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
</merge>
